test/statements/defer/error-defer-break.good
error-defer-break.chpl:1: In function 'foo':
error-defer-break.chpl:7: error: break cannot be used within a defer statement
